Fix a bug where the page system is disabled due to hitbox overlapping

--- a/style/ticket/tickets.css
+++ b/style/ticket/tickets.css
@@ -76,6 +76,7 @@ caption {
     padding: 10px;
     opacity: 0;
     transition: 0.2s;
+    z-index: 100;
 }
 
 caption:hover {
@@ -254,6 +255,7 @@ input[type="checkbox"] {
 
 table caption i {
     font-size: 20px;
+    z-index: 100;
 }
 
 /* Code for resizable table content */
@@ -263,7 +265,7 @@ table caption i {
     top: 0;
     left: 0;
     width: 3px;
-    height: 102%;
+    height: 95%;
     background: transparent;
     cursor: col-resize;
 }
@@ -274,7 +276,7 @@ table caption i {
     top: 0;
     left: -2vw;
     width: 70px;
-    height: 102%;
+    height: 95%;
     cursor: col-resize;
 }
 
